[package]
name = "tmp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
kvproto = { git = "https://github.com/pingcap/kvproto.git" }
tipb = { git = "https://github.com/pingcap/tipb.git" }
grpcio = { version = "0.10", default-features = false, features = ["openssl-vendored", "protobuf-codec"] }
protobuf = { version = "2.8", features = ["bytes"] }
futures-util = "*"
ctrlc = { version = "3.0", features = ["termination"] }

[patch.crates-io]
raft-proto = { git = "https://github.com/tikv/raft-rs", branch = "master" }
protobuf = { git = "https://github.com/pingcap/rust-protobuf", branch = "v2.8" }
protobuf-codegen = { git = "https://github.com/pingcap/rust-protobuf", branch = "v2.8" }
